infrastructure-collections/k3s-ngf-1c-1n-dev/platform-services/resend/resend-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resend-deployment
  namespace: shared-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-resend
  template:
    metadata:
      labels:
        app: service-resend
    spec:
      containers:
        - name: service-resend
          image: docker.io/cloith/resend # This matches your skaffold image name
          command: ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "300Mi" # Buffer for Node.js overhead
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: resend-email-service
  namespace: shared-services
spec:
  selector:
    app: service-resend
  ports:
    - protocol: TCP
      port: 80      # Port other pods use to talk to it
      targetPort: 3000 # Port inside the container
  type: ClusterIP      # Internal-only; use Ingress later to expose it
