infrastructure-collections/k3s-ngf-1c-1n-dev/platform-services/resend/resend-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: resend-route
  namespace: shared-services
spec:
  parentRefs:
    - name: tailscale-gateway
      namespace: nginx-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /resend
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /  # Strips '/resend' and replaces it with '/'
      backendRefs:
          - name: resend-email-service
            port: 80 # The port exposed by your Backend Service
